feat(deploy script): add farm deployment + ci modif

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,8 @@ jobs:
           docker pull tqtezos/flextesa:20211025
           docker run --rm --name hangz --detach -p 20000:20000 tqtezos/flextesa:20211025 hangzbox start
           npm i
-          bash deploy.sh
+          tsc
+          node deployFarmDb.js > .env
+          node deploy.js
+
+
