--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,11 +3,11 @@ on:
   push:
     branches:
       - master
-      - dev
+      - develop
   pull_request:
     branches:
       - master
-      - dev
+      - develop
 
 jobs:
   build:
@@ -16,14 +16,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Build docker image
         run: |
-          docker build -f Dockerfile.test . -t farms:latest
+          docker build -f Dockerfile . -t farms:latest
       - name: Run tests
         run: |
           docker run farms:latest
-      - name: Deployment
-        working-directory: ./deploy
-        run: |
-          docker-compose build
-          docker-compose up
-
 
