--- a/deploy/.env.farm_fa2_fa12
+++ b/deploy/.env.farm_fa2_fa12
@@ -5,20 +5,20 @@ ADMIN_ADDRESS="tz1RyejUffjfnHzWoRp1vYyZwGnfPuHsD5F5"
 # for Reward token
 REWARD_CONTRACT_ADDRESS=
 REWARD_AMOUNT=50000000
-REWARD_TOKEN_ID=1
+REWARD_TOKEN_ID=
 REWARD_RESERVE_ADDRESS=tz1RyejUffjfnHzWoRp1vYyZwGnfPuHsD5F5
 
 # for input token
 INPUT_CONTRACT_ADDRESS=
 INPUT_AMOUNT=100
-INPUT_TOKEN_ID=
+INPUT_TOKEN_ID=1
 INPUT_RESERVE_ADDRESS=tz1XyFD11RWJXwkht624fBcnXfwx3rcKccTE
 # specific for FA1.2
 INPUT_FA12_TOTAL_SUPPLY=20000
 
 # for database
 FARMSDB_ADDRESS=
-INFOFARM="test farm fa12 fa2"
+INFOFARM="test farm fa12 fa12"
 
 # for farm
 RATE=7500
