Launchpools test hangzhou

--- a/deploy/.env.preprod.fa12_anti
+++ b/deploy/.env.preprod.fa12_anti
@@ -3,7 +3,7 @@ ADMIN_PK=[private key]
 ADMIN_ADDRESS="tz1RyejUffjfnHzWoRp1vYyZwGnfPuHsD5F5"
 
 ## for REWARD token
-REWARD_CONTRACT_ADDRESS=KT1NSo4nEbZhEc1v5pXK5oPKpkATk55ZgC44
+REWARD_CONTRACT_ADDRESS=KT1V4QMPV9WPrDvBJ3bwRQjfDcqkV1eK317D
 REWARD_AMOUNT=5000
 REWARD_TOKEN_ID=
 REWARD_RESERVE_ADDRESS=tz1RyejUffjfnHzWoRp1vYyZwGnfPuHsD5F5
@@ -11,7 +11,7 @@ REWARD_RESERVE_ADDRESS=tz1RyejUffjfnHzWoRp1vYyZwGnfPuHsD5F5
 # for Input token
 # SMAK
 # INPUT_CONTRACT_ADDRESS="KT1G3jUVJbn4ZtyF4BTKPunFzbsYgadGMWSZ"
-INPUT_CONTRACT_ADDRESS=
+INPUT_CONTRACT_ADDRESS=KT1CBGs21NgGZXymSKNW9MCxzopq9HpRHsh2
 INPUT_AMOUNT=1000
 INPUT_TOKEN_ID=
 INPUT_RESERVE_ADDRESS=tz1Tr5mdFTtGZp9p2KUuWXxJHB6HSAZBj15u
@@ -21,7 +21,7 @@ INPUT_FA12_TOTAL_SUPPLY=777777777777
 
 # for database
 FARMSDB_ADDRESS=KT1N6AkVYZ86H6PEsJje2Hn263hGRsKuZjXF
-INFOFARM="test farm fa12 anti"
+INFOFARM="test farm fa12 anti (07022022)"
 
 # for farm
 RATE=7500
