--- a/deploy/.env.preprod.fa2_anti
+++ b/deploy/.env.preprod.fa2_anti
@@ -9,9 +9,11 @@ REWARD_TOKEN_ID=
 REWARD_RESERVE_ADDRESS=tz1RyejUffjfnHzWoRp1vYyZwGnfPuHsD5F5
 
 # for Input token
-INPUT_CONTRACT_ADDRESS="KT1V4QMPV9WPrDvBJ3bwRQjfDcqkV1eK317D"
-INPUT_AMOUNT=100
-INPUT_TOKEN_ID=
+# SMAK
+# INPUT_CONTRACT_ADDRESS="KT1G3jUVJbn4ZtyF4BTKPunFzbsYgadGMWSZ"
+INPUT_CONTRACT_ADDRESS=
+INPUT_AMOUNT=1000
+INPUT_TOKEN_ID=1
 INPUT_RESERVE_ADDRESS=tz1Tr5mdFTtGZp9p2KUuWXxJHB6HSAZBj15u
 # specific for FA1.2
 INPUT_FA12_TOTAL_SUPPLY=777777777777
@@ -19,7 +21,7 @@ INPUT_FA12_TOTAL_SUPPLY=777777777777
 
 # for database
 FARMSDB_ADDRESS=KT1N6AkVYZ86H6PEsJje2Hn263hGRsKuZjXF
-INFOFARM="test farm anti anti (07022022)"
+INFOFARM="test farm fa2 anti (07022022)"
 
 # for farm
 RATE=7500
