--- a/deploy/.env.preprod.anti_fa2
+++ b/deploy/.env.preprod.anti_fa2
@@ -4,15 +4,15 @@ ADMIN_ADDRESS="tz1RyejUffjfnHzWoRp1vYyZwGnfPuHsD5F5"
 
 ## for REWARD token
 REWARD_CONTRACT_ADDRESS=
-REWARD_AMOUNT=5000
+REWARD_AMOUNT=500
 REWARD_TOKEN_ID=1
 REWARD_RESERVE_ADDRESS=tz1RyejUffjfnHzWoRp1vYyZwGnfPuHsD5F5
 
 # for Input token
 # SMAK
 # INPUT_CONTRACT_ADDRESS="KT1G3jUVJbn4ZtyF4BTKPunFzbsYgadGMWSZ"
-INPUT_CONTRACT_ADDRESS=KT1V4QMPV9WPrDvBJ3bwRQjfDcqkV1eK317D
-INPUT_AMOUNT=1000
+INPUT_CONTRACT_ADDRESS=KT1LRSAECDjmXzguL8eiiFxVshMsijjVmNB2
+INPUT_AMOUNT=100
 INPUT_TOKEN_ID=
 INPUT_RESERVE_ADDRESS=tz1Tr5mdFTtGZp9p2KUuWXxJHB6HSAZBj15u
 # specific for FA1.2
@@ -21,7 +21,7 @@ INPUT_FA12_TOTAL_SUPPLY=777777777777
 
 # for database
 FARMSDB_ADDRESS=KT1N6AkVYZ86H6PEsJje2Hn263hGRsKuZjXF
-INFOFARM="test farm fa12 anti (07022022)"
+INFOFARM="test farm anti fa2 (07022022)"
 
 # for farm
 RATE=7500
