--- a/deploy/.env.prod.xtzctez_anti
+++ b/deploy/.env.prod.xtzctez_anti
@@ -13,7 +13,7 @@ INPUT_CONTRACT_ADDRESS="KT1GtoXddGuPfBSwdT1GCG9HQE7AMMKzWf3H"
 INPUT_TOKEN_ID=
 
 # for database
-FARMSDB_ADDRESS=
+FARMSDB_ADDRESS=KT1STNp7YtWrUQxSwZLNXFyRyv7tQJaiY9aC
 INFOFARM="XTZ/Ctez->ANTI, 16 period(s), 16 weeks approx in total"
 
 # for farm
