--- a/deploy/.env.prod.xtzkusd_anti
+++ b/deploy/.env.prod.xtzkusd_anti
@@ -13,7 +13,7 @@ INPUT_CONTRACT_ADDRESS="KT1JZHtsz7r9uYLLRKGgLvP8HR5eM75MfrHU"
 INPUT_TOKEN_ID=
 
 # for database
-FARMSDB_ADDRESS=
+FARMSDB_ADDRESS=KT1STNp7YtWrUQxSwZLNXFyRyv7tQJaiY9aC
 INFOFARM="XTZ/kUSD->ANTI, 16 period(s), 16 weeks approx in total"
 
 # for farm
