--- a/deploy/.env.prod.smak_smak_1
+++ b/deploy/.env.prod.smak_smak_1
@@ -18,7 +18,7 @@ INPUT_TOKEN_ID=
 
 
 # for database
-FARMSDB_ADDRESS=
+FARMSDB_ADDRESS=KT1STNp7YtWrUQxSwZLNXFyRyv7tQJaiY9aC
 INFOFARM="SMAK->SMAK, 16 period(s), 16 weeks approx in total"
 
 # for farm
