--- a/deploy/.env.prod.smak_smak_2
+++ b/deploy/.env.prod.smak_smak_2
@@ -18,7 +18,7 @@ INPUT_TOKEN_ID=
 
 
 # for database
-FARMSDB_ADDRESS=
+FARMSDB_ADDRESS=KT1STNp7YtWrUQxSwZLNXFyRyv7tQJaiY9aC
 INFOFARM="SMAK->SMAK, 1 period(s), 26,1 weeks approx in total"
 
 # for farm
