--- a/deploy/.env.prod.xtzanti_anti
+++ b/deploy/.env.prod.xtzanti_anti
@@ -9,11 +9,11 @@ REWARD_TOKEN_ID=
 REWARD_RESERVE_ADDRESS=tz1Lkw9dx7c4cc9t99UzJk8kBv7oHz4Z6Q9V
 
 # for Input token
-INPUT_CONTRACT_ADDRESS=""
+INPUT_CONTRACT_ADDRESS="KT1PwnTa2f1Uac958RFTk6i6EecPNgJrtHKv"
 INPUT_TOKEN_ID=
 
 # for database
-FARMSDB_ADDRESS=
+FARMSDB_ADDRESS=KT1STNp7YtWrUQxSwZLNXFyRyv7tQJaiY9aC
 INFOFARM="XTZ/ANTI->ANTI, 16 period(s), 16 weeks approx in total"
 
 # for farm
