--- a/deploy/.env.prod.xtzbtctz_anti
+++ b/deploy/.env.prod.xtzbtctz_anti
@@ -13,7 +13,7 @@ INPUT_CONTRACT_ADDRESS="KT1XkmNDDEcsjxgJJ3LVBme9bx86tNagYuKi"
 INPUT_TOKEN_ID=
 
 # for database
-FARMSDB_ADDRESS=
+FARMSDB_ADDRESS=KT1STNp7YtWrUQxSwZLNXFyRyv7tQJaiY9aC
 INFOFARM="XTZ/BTCtz->ANTI, 16 period(s), 16 weeks approx in total"
 
 # for farm
