--- a/deploy/.env.prod.xtzquipu_anti
+++ b/deploy/.env.prod.xtzquipu_anti
@@ -13,7 +13,7 @@ INPUT_CONTRACT_ADDRESS="KT1MWSBaGkVMEx4wHfxqPym427rLvTVM1siB"
 INPUT_TOKEN_ID=
 
 # for database
-FARMSDB_ADDRESS=
+FARMSDB_ADDRESS=KT1STNp7YtWrUQxSwZLNXFyRyv7tQJaiY9aC
 INFOFARM="XTZ/QUIPU->ANTI, 16 period(s), 16 weeks approx in total"
 
 # for farm
