--- a/deploy/.env.prod.xtzusdtz_anti
+++ b/deploy/.env.prod.xtzusdtz_anti
@@ -13,7 +13,7 @@ INPUT_CONTRACT_ADDRESS="KT19T6ZqpUWvMYX9LH9FmCkahyEyGY27PEPT"
 INPUT_TOKEN_ID=
 
 # for database
-FARMSDB_ADDRESS=
+FARMSDB_ADDRESS=KT1STNp7YtWrUQxSwZLNXFyRyv7tQJaiY9aC
 INFOFARM="XTZ/USDtz->ANTI, 16 period(s), 16 weeks approx in total"
 
 # for farm
