--- a/deploy/.env.prod.xtzuusd_anti
+++ b/deploy/.env.prod.xtzuusd_anti
@@ -13,7 +13,7 @@ INPUT_CONTRACT_ADDRESS="KT1MCJsFdhpgKJaJ8t8o99tDuyB2DdjdpRUe"
 INPUT_TOKEN_ID=
 
 # for database
-FARMSDB_ADDRESS=
+FARMSDB_ADDRESS=KT1STNp7YtWrUQxSwZLNXFyRyv7tQJaiY9aC
 INFOFARM="XTZ/Uusd->ANTI, 16 period(s), 16 weeks approx in total"
 
 # for farm
