--- a/deploy/.env.prod.xtzyoudefi_anti
+++ b/deploy/.env.prod.xtzyoudefi_anti
@@ -13,7 +13,7 @@ INPUT_CONTRACT_ADDRESS="KT1WqRhUKCqnq7nwwtySk3SPP3ebyrKtfbx9"
 INPUT_TOKEN_ID=
 
 # for database
-FARMSDB_ADDRESS=
+FARMSDB_ADDRESS=KT1STNp7YtWrUQxSwZLNXFyRyv7tQJaiY9aC
 INFOFARM="XTZ/YouDEFI->ANTI, 16 period(s), 16 weeks approx in total"
 
 # for farm
